--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Primeinfrarealty</title>
+  <link rel="icon" type="image/x-icon" href="/logo.png">
+  <meta name="title" content="Primeinfrarealty" />
+  <meta name="description"
+    content="A leading infrastructure development group aimed at fostering National & Global Development." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://primeinfrarealty.com/" />
+  <meta property="og:title" content="Primeinfrarealty" />
+  <meta property="og:description"
+    content="A leading infrastructure development group aimed at fostering National & Global Development." />
+  <meta property="og:image" content="/logo-dark.png" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://primeinfrarealty.com/" />
+  <meta property="twitter:title" content="Primeinfrarealty" />
+  <meta property="twitter:description"
+    content="A leading infrastructure development group aimed at fostering National & Global Development." />
+  <meta property="twitter:image" content="/logo-dark.png" />
+
 </head>
 
 <body>
